k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kubesense-backend
  namespace: kubesense

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kubesense-backend

  template:
    metadata:
      labels:
        app: kubesense-backend

    spec:
      serviceAccountName: kubesense-backend

      containers:
        - name: backend

          image: joypatel2403/kubesense-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
