k8s/base/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: kubesense-backend-service
  namespace: kubesense

spec:
  selector:
    app: kubesense-backend

  ports: 
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
