k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubesense-ingress
  namespace: kubesense
spec:
  ingressClassName: nginx
  rules:
    - host: kubesense.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubesense-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubesense-frontend-service
                port:
                  number: 3000
