k8s/base/install.yaml
# Source: service-account.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
  namespace: kubesense

spec:
  replicas: 1

  selector:
    matchLabels:
      app: postgres

  template:
    metadata:
      labels:
        app: postgres

    spec:
      containers:
        - name: postgres
          image: postgres:17

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-storage
              mountPath: /var/lib/postgresql/data

      volumes:
        - name: postgres-storage
          persistentVolumeClaim:
            claimName: postgres-pvc

# Source: postgres-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: postgres-service
  namespace: kubesense

spec:
  selector:
    app: postgres

  ports:
    - port: 5432
      targetPort: 5432

  type: ClusterIP

# Source: backend-service.yaml
---
apiVersion: v1
kind: Service

metadata:
  name: kubesense-backend-service
  namespace: kubesense

spec:
  selector:
    app: kubesense-backend

  ports: 
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP

# Source: backend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kubesense-backend
  namespace: kubesense

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kubesense-backend

  template:
    metadata:
      labels:
        app: kubesense-backend

    spec:
      serviceAccountName: kubesense-backend

      containers:
        - name: backend

          image: joypatel2403/kubesense-backend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service

metadata:
  name: kubesense-frontend-service
  namespace: kubesense

spec:
  selector:
    app: kubesense-frontend

  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

  type: ClusterIP

# Source: frontend-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: kubesense-frontend
  namespace: kubesense

spec:
  replicas: 1

  selector:
    matchLabels:
      app: kubesense-frontend

  template:
    metadata:
      labels:
        app: kubesense-frontend

    spec:
      containers:
        - name: frontend
          image: joypatel2403/kubesense-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 3000

# Source: ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubesense-ingress
  namespace: kubesense
spec:
  ingressClassName: nginx
  rules:
    - host: kubesense.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: kubesense-backend-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubesense-frontend-service
                port:
                  number: 3000
